--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tomlondn.github.io/Quizapp-Version-1/",
+  "homepage": "http://tomlondn.github.io/Quizapp-Version-1/",
   "name": "locator",
   "version": "0.1.0",
   "private": true,
